fix(header): add the debouncer to prevent scroll jumping problem
n

--- a/src/assets/scss/layout/header.scss
+++ b/src/assets/scss/layout/header.scss
@@ -1,25 +1,28 @@
 .header {
   position: sticky;
-  display: flex;
-  flex-wrap: nowrap;
-  overflow: auto;
-  gap: 8px;
-  justify-content: space-between;
-  align-items: center;
   top: 0;
   left: 0;
   right: 0;
-  min-height: 90px;
-  padding: 0 24px;
-  background-color: $white-color;
-  border-bottom: 1px solid $light-grey-color;
-  transition: height 0.3s ease 0s;
   z-index: 10;
 
-  &-compact {
-    min-height: 60px;
-    background-color: $medium-blue-color;
-    border-color: $grey-border-color;
+  &__wrapper {
+    display: flex;
+    flex-wrap: nowrap;
+    overflow: auto;
+    gap: 8px;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    height: 90px;
+    padding: 0 24px;
+    background-color: $white-color;
+    border-bottom: 1px solid $light-grey-color;
+    transition: all 0.3s ease 0s;
+    &-compact {
+      height: 60px;
+      background-color: $medium-blue-color;
+      border-color: $grey-border-color;
+    }
   }
 
   &__left {
